# spotify-imessage

./: .dockerignore  .gitignore  .netlify.toml  .netlifyignore  .railwayignore  CODE_REVIEW.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_OPTIONS.md  DEPLOY_NOW.md  DISTRIBUTION_SUMMARY.md  Dockerfile  MANIFEST.in  Procfile  QUICK_FIX.md  RAILWAY_FIX.md  RAILWAY_ROOT_DIRECTORY_FIX.md  RAILWAY_SETUP.md  README.md  SECURITY_AND_STABILITY.md  SPOTIFY_OAUTH_SETUP.md  STRATEGIC_ROADMAP.md  TEST_SUITE.md  api_resilience.py  app.py  nixpacks.toml  pyproject.toml  railway.json  requirements.txt  start.sh
.github/workflows/: ci.yml
docs/: BULLETPROOF_DEPLOYMENT.md  DEPLOYMENT_GUIDE 2.md  DEPLOYMENT_SETUP.md  DISTRIBUTION_SUMMARY.md  LEGAL_COMPLIANCE.md  LIGHTWEIGHT_BUILD.md  PLATFORM_COMPATIBILITY.md  QUICK_DEPLOY.md  README.md  RELEASE_CHECKLIST.md  RELEASE_DESCRIPTION.md  SECRETS_AND_HISTORY.md  SIGNING_AND_NOTARIZATION.md  SPOTIFY_OAUTH_SETUP.md  STRATEGIC_ROADMAP.md  SYNC_BRANCHES.md  TEST_SUITE.md  WINDOWS_SETUP.md  index.html
electron/scripts/: notarize.js
scripts/: fix-git.sh  release.py
src/: cli.py
src.backup/spotify_imessage/: __init__.py  android.py  compatibility.py
src/spotify_imessage/: cli.py  compatibility.py
tests/: __init__.py  sample_android_export.txt  test_android_integration.py  test_cli.py
web-react/: .cache  .cache 2  .dockerignore  .env 2  .env.example  .netlify.toml  DEPLOYMENT_CHECKLIST.md  Dockerfile  README-SMART-STARTUP.md  README-STARTUP.md  README.md  api_resilience.py  cookies.txt  deploy.sh  env.config  env.example  error_handler.py  minimal_server.py  netlify.toml  package-lock-pinned.json  package-lock.json  package.json  progressive_server.py  railway.json  requirements-pinned.txt  requirements.txt  security_config.py  server.py  start-backend.sh  start-both.sh  start-frontend.sh  start.bat  start.sh  tailwind.config.js  test.js  test_globals_server.py  test_server.py
web-react/public/: _redirects  create-icons.html  generate-icons-simple.html  generate-icons.js  index.html  manifest.json  service-worker.js  test.html
web-react/src/: App.js  index.css  index.js  pwa-install.js
web-react/src/components/: ErrorBoundary.js  FileUpload.tsx  ProcessingForm.tsx  ProgressBar.tsx  ResultDisplay.tsx  SpotifyPlayer.js  StatsCard.tsx
web-react/src/services/: api.ts
web-react/src/types/: index.ts
web-react/src/utils/: errorHandler.js
