[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spotify-imessage"
version = "0.1.0"
description = "Sync Spotify tracks shared in an iMessage group chat into a Spotify playlist."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{name = "Your Name", email = "you@example.com"}]
keywords = ["spotify", "imessage", "playlist", "automation", "cli"]
dependencies = ["click>=8,<9", "spotipy>=2.23,<3"]

[project.scripts]
spotify-imessage = "spotify_imessage.cli:cli"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
