[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spotify-imessage"
version = "0.1.0"
description = "Extract Spotify tracks from messages and create playlists. CLI + web app."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "spotipy>=2.20",
    "requests>=2.28",
]

[project.optional-dependencies]
web = [
    "flask>=3.0",
    "flask-cors>=4.0",
    "python-dotenv>=1.0",
]

[project.scripts]
spotify-imessage = "spotify_imessage.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
